# image-voodoo

./: .gitignore  Cargo.toml  LICENSE.txt  LICENSE_MIT  README.md  dump  justfile  package-lock.json  ssh.fish
next/: .gitignore  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  store.ts  tailwind.config.js
next/componenets/: convolution_form.tsx  edge_form.tsx  filtering_form.tsx  flip_form.tsx  histogram_form.tsx  image_uploader.tsx  image_view.tsx  linear_transformation_form.tsx  noise.tsx  operations_view.tsx  power_form.tsx  rotation_form.tsx  scaling_form.tsx  shear_form.tsx
next/components/: crop.tsx  edge_form.tsx  filtering_form.tsx  flip_form.tsx  gpt4_magic.tsx  image_uploader.tsx  image_view.tsx  linear_transformation_form.tsx  misc.tsx  operations_view.tsx  power_form.tsx  scaling_form.tsx  shear_form.tsx
next/components/dev/: palette.tsx  previews.tsx
next/pages/: _app.tsx  _document.tsx  image_viewer.tsx  index.tsx
src/: affine.rs  canvas_image.rs  color_space.rs  convolution.rs  distance.rs  flip.rs  fn_extensions.rs  histogram.rs  image_index.rs  interpolation.rs  lib.rs  rotation.rs  scaling.rs  single_pixel_transformation.rs
src/canvas_image/: crop.rs  edge_detection.rs  filters.rs  iterator.rs
tests/: web.rs
www/: LICENSE-MIT  README.md  index.html  index.js  package-lock.json  package.json
