[package]
name = "image-voodoo"
version = "0.1.0"
authors = ["Liang Wang <liang.wang.ice@gmail.com>"]
edition = "2021"
description = "WASM image processing library"
repository = "https://github.com/Internal-Compiler-Error/image-voodoo"

license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = {version = "0.3.36", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData"]}
num-traits = "0.2.15"
float-cmp = "0.9.0"
num = "0.4.0"
itertools = "0.10.5"
color-eyre = "0.6.2"
nalgebra = "0.32.2"
rustfft = "6.1.0"
enum-iterator = "1.4.0"
wasm-logger = "0.2.0"
log = "0.4.17"
env_logger = "0.10.0"

getrandom = {version = "0.2.3", features = ["js"]}
rand = {version = "0.8.4"}
rand_distr = {version = "0.4.0"}
wasm-rs-dbg = "0.1.2"
#anyhow = "1.0.70"



[dev-dependencies]
image = "0.24.6"
wasm-bindgen-test = "0.3.34"
wasm-rs-dbg = "0.1.2"

[profile.release]
opt-level = 3
